# twilio-deepgram-voice

./: .gitignore  README.md  blog-function-calling.md  blog-inbound.md  blog-latency.md  blog-outbound.md  blog-self-hosted.md
azure-stt/: README.md  bot.py  env.example  modal_app.py  pyproject.toml  resilient_azure_stt.py
function-calling/: Dockerfile  README.md  bot.py  env.example  modal_app.py  observers.py  pyproject.toml  tools.py
inbound/: Dockerfile  README.md  bot.py  docker-compose.yml  env.example  modal_app.py  pyproject.toml
latency/: Dockerfile  README.md  bot.py  modal_app.py  pyproject.toml
outbound/: Dockerfile  README.md  bot.py  docker-compose.yml  env.example  modal_app.py  pyproject.toml
scripts/: pyproject.toml  test_call.py
self-hosted/: Dockerfile.xtts  README.md  bot.py  docker-compose.yml  env.example  modal_app.py  modal_vllm.py  modal_xtts.py  pyproject.toml  tts_server.py
